Fixed clone URL wrapping instead of ellipsis (#87)
* Fixed clone URL wrapping instead of ellipsis

* Updated CHANGELOG.md

--- a/src/scss/project-details.component.scss
+++ b/src/scss/project-details.component.scss
@@ -54,6 +54,7 @@
         height: 1.25rem;
         width: 10.5rem;
         font-size: 80%;
+        white-space: nowrap;
       }
     }
 
